Chapter 3.2.2 Use Cases added, was missing

--- a/Latex/Files/requirements.tex
+++ b/Latex/Files/requirements.tex
@@ -7,6 +7,7 @@
 This chapter provides a comprehensive overview of the system's use cases, detailing the various interactions between Users and the system.
 Use Case Diagrams, detailed Use Case Descriptions, Sequence Diagrams and Requirement Mapping are provided for each use case.
 \subsubsection{Use Case Diagrams}
+\subsubsection{Use Cases}
 \subsubsection{Sequence Diagrams}
 \subsubsection{Requirements Mapping}
 \subsection{Performance Requirements}
