Update Latex Documents & Images

--- a/Latex/Files/introduction.tex
+++ b/Latex/Files/introduction.tex
@@ -72,15 +72,16 @@ This section offers explanations of terminology to elucidate the terms, acronyms
     \item \textcolor{titleColor}{\textbf{Recommendation Process}}\label{def:recommendationProcess}: The process of matching a Student with an Internship offered by a Company based on the Student's CV and the Internship's requirements made by the S\&C platform.
     \item \textcolor{titleColor}{\textbf{Recommendation/Match}\label{def:match}}: The result of the Recommendation Process. It is the match between a Student and an Internship.
     \item \textcolor{titleColor}{\textbf{Spontaneous Application}\label{def:spontaneousApplication}}: The process of a Student manually applying for an Internship that was not matched through the Recommendation Process.
-    \item \textcolor{titleColor}{\textbf{Template Interview}\label{def:templateInterview}}: A collection of open-ended questions, quizzes, and calls that a Company can create. Each time a Company wants to interview a Student, they can select a Template Interview, or create a new one, and assign it to the Student.
-    \item \textcolor{titleColor}{\textbf{Interview}\label{def:Interview}}: The process of evaluating a Student's application for an Internship done through a Template Interview.
+    \item \textcolor{titleColor}{\textbf{Interview}\label{def:Interview}}: The process of evaluating a Student's application for an Internship done by a Company through the S\&C platform. 
     \item \textcolor{titleColor}{\textbf{Feedback}\label{def:Feedback}}: Information provided by Students and Companies to the S\&C platform to improve the Recommendation Process.
     \item \textcolor{titleColor}{\textbf{Suggestion}\label{def:suggestion}}: Information provided by the S\&C platform to Students and Companies to improve their CVs and Internship descriptions.
     \item \textcolor{titleColor}{\textbf{Complaint}\label{def:complaint}}: A report of a problem or issue that a Student or Company has with an ongoing Internship. It can be published on the platform and handled by the University.
     \item \textcolor{titleColor}{\textbf{Confirmed Match}\label{def:confirmedMatch}}: A match that has been accepted by both a Student and a Company.
     \item \textcolor{titleColor}{\textbf{Rejected Match}\label{def:rejectedMatch}}: A match that has been refused by either a Student or a Company.
     \item \textcolor{titleColor}{\textbf{Pending Match}\label{def:pendingMatch}}: A match that has been accepted only by a Student or a Company, waiting for a response from the other party.
-    \item \textcolor{titleColor}{\textbf{Unaccepted Match}\label{def:unacceptedMatch}}: A match that has been refused by either a Student or a Company
+    \item \textcolor{titleColor}{\textbf{Unaccepted Match}\label{def:unacceptedMatch}}: A match that has been refused by either a Student or a Company.
+    \item \textcolor{titleColor}{\textbf{Confirmed Internship}\label{def:confirmdInternship}}: An Internship that has been accepted by the Student and the offering Company.
+    
     
     
 \end{itemize}
