Update Latex Document from Overleaf Class Diagram, Domain Assumptions, World/Shared Phenomena, Goals

--- a/Latex/Files/introduction.tex
+++ b/Latex/Files/introduction.tex
@@ -4,13 +4,16 @@ S\&C will support the entire lifecycle of the Internship process for both Studen
 In the meantime, Student\&Company will also provide a series of Suggestions to improve CVs published by Students and internship offers published by Companies. The platform will also allow the Universities of Students who are actually doing an internship to monitor the progress of such activities and handle any Complaints if necessary, even by terminating the internship if no other solution to the problem can be found.
 \subsubsection{Goals}
 \begin{enumerate}[label={\color{titleColor}[G\arabic*]}]
-\item Companies would like to advertise the internship they offer 
-\item Students would like to autonomously candidate for available internships 
- \item Students would like to be matched with internships they might be interested in 
- \item Companies would like to perform interviews with matched students 
- \item Students and Companies would like to complain, communicate problems, provide information about an ongoing internship 
- \item Students and Companies would like to be provided with suggestions about how to improve their submission 
- \item Universities would like to handle complaints about ongoing internships 
+\item Companies would like to advertise the internship they offer.
+\item Students would like to autonomously candidate for available internships.
+\item Students would like to be matched with internships they might be interested in.
+\item Companies would like to perform interviews with matched students.
+\item Students and companies would like to complain, communicate problems, and provide information about an ongoing internship.
+\item Students and companies would like to be provided with suggestions about how to improve their submission;
+\item Universities would like to handle complaints about ongoing internships.
+\item Students would like to choose the internship where they successfully passed the interview.
+\item Companies would like to select students for the internship position among those who passed the interview.
+ 
 \end{enumerate}
 
 
@@ -59,7 +62,64 @@ The main features to provide in order to satisfy all the goals are the following
 \end{itemize}
 
 \subsubsection{World Phenomena}
+\begin{enumerate}[label={\color{titleColor}[WP\arabic*]}]
+\item A company wants to advertise its internship.
+\item A student wants to apply for an internship.
+\item A company wants to accept a suitable recommendation.
+\item A company wants to accept a student's spontaneous application.
+\item A student wants to accept a suitable recommendation.
+\item A company wants to interview a student.
+\item A company wants to manage (create, visualize, send, evaluate) its interviews.
+\item A student wants to answer questions concerning an interview.
+\item A company wants to complain, communicates problem, provide information about an ongoing internship.
+\item A student wants to complain, communicates problem, provide information about an ongoing internship.
+\item A student wants to receive suggestions on how to improve his CV.
+\item A company wants to receive suggestions on how to improve their internship offers.
+\item A university wants to monitor an ongoing internship that involves one of their students.
+\item A university wants to handle complaints about an ongoing internship that involves one of their students.
+\item A university wants to interrupt an ongoing internship that involves one of their students.
+\item A company wants to choose from the students they are interested in the ones to whom they will offer the internship position.
+\item A student wants to choose an internship position offer.
+
+\end{enumerate}
 \subsubsection{Shared Phenomena}
+\paragraph{Shared - By World}
+\begin{enumerate}[label={\color{titleColor}[SPW\arabic*]}]
+\item A company publish an internship.
+\item A student insert his CV.
+\item A company accepts a spontaneous application.
+\item A student or company monitors his recommendations.
+\item A student or a company accepts a recommendation.
+\item A company creates interviews for a specific internship.
+\item A company sends to a student a previously created interview.
+\item A company evaluates a previously sent interview that has been answered by the student.
+\item A student answers questions related to an interview.
+\item A company sends to a student who passed the interview an internship position offer.
+\item A student accepts an internship position offer.
+\item A student or company complains, communicates problem, provides information about an ongoing internship.
+\item A university answers to complaints about ongoing internships that involves one of their students.
+\item A university interrupts an internship that involves one of their students.
+\end{enumerate}
+\paragraph{Shared - By Machine}
+\begin{enumerate}[label={\color{titleColor}[SPM\arabic*]}]
+    \item The platform shows to students available internships.
+\item The platform shows to companies available candidates for their internships.
+\item The platform shows to students and companies information about their recommendations and spontaneous applications.
+\item The platform asks for feedback to improve the recommendation research mechanism.
+\item The platform notifies students and companies when a suitable recommendation involving them is found.
+\item The platform shows to companies information about their interviews.
+\item The platform provides students and companies suggestions about how to formulate better respectively their CV and internship offers.
+\item The platform shows to universities information about an ongoing internship.
+\item The platform notifies companies when there is a new spontaneous application regarding one of their internships.
+\item The platform notifies a student when a company accepts his spontaneous application.
+\item The platform notifies a student when a company sends to him a new interview.
+\item The platform notifies a student when a company evaluates an interview he previously sent.
+\item The platform notifies a student when a company sends him an internship offer.
+\item The platform notifies a company when a student accepts his internship position offer.
+\item The platform notifies the involved student and the company when a university terminates their internship.
+\item The platform notifies the university when there is a new complaint or problem about an ongoing internship regarding one of their students.
+
+\end{enumerate}
 \subsection{Definitions, Acronyms, Abbreviations}  
 This section offers explanations of terminology to elucidate the terms, acronyms and abbreviations used throughout the document, facilitating easy comprehension and reference for the readers.
 \subsubsection{Definition}
