--- a/Latex/Files/overview.tex
+++ b/Latex/Files/overview.tex
@@ -63,6 +63,7 @@
 
 
 \subsubsection{Class Diagrams}
+\includegraphics[width=\linewidth]{Diagrams/Class Diagrams/ClassDiagram1.1.png}
 
 \subsubsection{State Charts}
 The following section provides a series of state diagrams that illustrate the evolution of the main phases of the Student\&Company platform. For this purpose, we propose three diagrams representing the Recommendation Process evolution with the corresponding Spontaneous Application variant and the Interview Process.
@@ -155,12 +156,12 @@ This section outlines the essential functionalities and detailed requirements of
 \subsection{Assumptions, dependencies, and constraints}
 
 \subsubsection{Domain Assumption}
-This section outlines the basic assumptions about the environment and behaviour of entities that interact with the system. These assumptions simplify the design and implementation by defining expectations about Students, Companies, Universities, and the platform, ensuring the system operates effectively within its intended context.
+This section outlines the basic assumptions about the environment and behavior of entities that interact with the system. These assumptions simplify the design and implementation by defining expectations about Students, Companies, Universities, and the platform, ensuring the system operates effectively within its intended context.
 \begin{enumerate}[label={\color{titleColor}[D\arabic*]}]
-\item Students and Companies provide the Platform with correct and truthful information
-\item Companies remove published Internship if they are no longer available
-\item Students, Companies, and Universities receive every notification
-\item Students, Companies, and Universities have a working internet connection
-\item Universities interrupt an ongoing Internship only if no solution to complaints are found
+\item Students and Companies provide the Platform with correct and truthful information.
+\item Companies remove published internships if they are no longer available.
+\item Students, Companies, and Universities receive and visualize every notification.
+\item Students, Companies, and Universities have a working internet connection.
+\item Universities interrupt an ongoing internship only if no solution is found to the complaints.
 \end{enumerate}
 \subsubsection{Dependencies}
