Fix Images Errors in Latex

--- a/Latex/Files/overview.tex
+++ b/Latex/Files/overview.tex
@@ -63,7 +63,7 @@
 
 
 \subsubsection{Class Diagrams}
-\includegraphics[width=\linewidth]{Diagrams/Class Diagrams/ClassDiagram1.1.png}
+\includegraphics[width=\linewidth]{Images/ClassDiagram1.1.png}
 
 \subsubsection{State Charts}
 The following section provides a series of state diagrams that illustrate the evolution of the main phases of the Student\&Company platform. For this purpose, we propose three diagrams representing the Recommendation Process evolution with the corresponding Spontaneous Application variant and the Interview Process.
