Updates from Overleaf

--- a/Latex/Files/introduction.tex
+++ b/Latex/Files/introduction.tex
@@ -4,14 +4,14 @@ S\&C will support the entire lifecycle of the Internship process for both Studen
 In the meantime, Student\&Company will also provide a series of Suggestions to improve CVs published by Students and internship offers published by Companies. The platform will also allow the Universities of Students who are actually doing an internship to monitor the progress of such activities and handle any Complaints if necessary, even by terminating the internship if no other solution to the problem can be found.
 \subsubsection{Goals}
 \begin{enumerate}[label={\color{titleColor}[G\arabic*]}]
-\item Companies would like to advertise the internship they offer.
+\item Companies would like to advertise the internships they offer.
 \item Students would like to autonomously candidate for available internships.
 \item Students would like to be matched with internships they might be interested in.
-\item Companies would like to perform interviews with matched students.
+\item Companies would like to perform interviews with suitable students.
 \item Students and companies would like to complain, communicate problems, and provide information about an ongoing internship.
 \item Students and companies would like to be provided with suggestions about how to improve their submission;
 \item Universities would like to handle complaints about ongoing internships.
-\item Students would like to choose the internship where they successfully passed the interview.
+\item Students would like to choose which internship to attend from among those for which they passed the interview.
 \item Companies would like to select students for the internship position among those who passed the interview.
  
 \end{enumerate}
