--- a/Latex/Files/overview.tex
+++ b/Latex/Files/overview.tex
@@ -23,7 +23,7 @@
         While computing the matching, the platform also provides Stefano with some suggestions on how to improve his CV and matching probability, based on a grammar and lexical analyses and a direct comparing of Stefano's CV with other similar candidate
     \item \textbf{\textcolor{titleColor}{Company Submit an Internship Insertion}}\\
         AnanasPhone is a major tech company, specialized in the production of smartphone and tablet, that has an account on the S\&C site. The company wants to create an internship program aim to software engineers student in their final year of Master Degree.\\
-        A Human Resource employee open the S\&C platform and select “My Internship” where a list of all the internship already present on S\&C are shown. Here he clicks on “Insert Internship” where he provides the required information such as the internship title, the internship description, the start date and duration, the office address, a list of the required skills student need to have in order to be considered for the internship and, possibly, a list of benefits offered to the future intern. Once the internship is created, by clicking on the “Submit Internship” button, the platform will start the recommendation process with the aim to match the internship with all the students that are compatible with such opportunity, based on the given information of both parties.\\
+        A Human Resource employee open the S\&C platform and select “My Internships” where a list of all the internship already present on S\&C are shown. Here he clicks on “Create Internship” where he provides the required information such as the internship title, the internship description, the start date and duration, the office address, a list of the required skills student need to have in order to be considered for the internship and, possibly, a list of benefits offered to the future intern. Once the internship is created, by clicking on the “Submit Internship” button, the platform will start the recommendation process with the aim to match the internship with all the students that are compatible with such opportunity, based on the given information of both parties.\\
         The platform will also provide AnanasPhone with some suggestion on how to improve the internship description, and matching probability, based on a grammar and lexical analyses and a direct comparing of AnanasPhone's Internship proposal with other similar companies.
     \item \textbf{\textcolor{titleColor}{Company create structured interview to submit to possible candidate}}\\
         MacroHard is a world-leading tech company, known for creating its secure and reliable operating system, “Door”. The company has an account on the S\&C platform and has already set up an internship program for software engineering students pursuing a Master’s degree. The company wants to create a structured interview to evaluate the technical skills and motivation of the students who apply for the internship.\\
@@ -37,7 +37,7 @@
     \item \textbf{\textcolor{titleColor}{Student manually applies for an internship}}  
         Marco is a chemistry student that has already uploaded his CV on the S\&C platform and is looking for an internship. Unfortunately, the matching internships provided by the platform do not fully satisfy his needs and he decides to proactively search for another one.\\
         He opens the platform's homepage and click on the “Browse all Internships” button. Here he can see all the internships that are available on the platform and he can filter them by field of study, required skills, location and other parameters.
-        He finds an internship that is not in the matching list provided by the platform, but that is perfect for him, so he clicks on the “Spontaneous Application” button.\\
+        He finds an internship that is not in the matching list provided by the platform, but that is perfect for him, so he clicks on the “Apply” button.\\
         The platform notify the company that Marco has applied for the internship and will inform the student if and when the company will start the application process by sending him a structured interview. There is no need for Marco to accept the interview, as a spontaneous application is considered as an implicit acceptance of the match by the student.
     \item \textbf{\textcolor{titleColor}{Student see his application  interview status}}\\
         Stefano is a student who has applied for various internships through the S\&C platform. He has submitted applications both by matching with companies through the platform's automated feature and by manually applying, and with some of them he is already in a selection phase and he is currently waiting for updates from the different companies.\\
@@ -63,30 +63,79 @@
 
 
 \subsubsection{Class Diagrams}
-\includegraphics[width=\linewidth]{Images/ClassDiagram1.1.png}
-
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=\linewidth]{Images/ClassDiagram1.1.png}
+    \caption{Class Diagram}
+    \label{fig:ClassDiagram}
+\end{figure}
+\newpage
 \subsubsection{State Charts}
 The following section provides a series of state diagrams that illustrate the evolution of the main phases of the Student\&Company platform. For this purpose, we propose three diagrams representing the Recommendation Process evolution with the corresponding Spontaneous Application variant and the Interview Process.
-
-\textbf{Recommendation Process}\\
-\includegraphics[width=1 \textwidth]{Images/RaccomandationStateChart.png}
+\newline\newline
+\noindent\textbf{Recommendation Process}\\
+\begin{figure}[ht]
+    \centering
+    \includegraphics[width=1 \textwidth]{Diagrams/StateCharts/RecommendationStateChart.png}
+    \caption{Recommendation State Chart}
+    \label{fig:RecommendationProcess}
+\end{figure}
 \begin{itemize}
-    \item The Recommendation Process is the core of the Student\&Company platform. It is the process that matches Students with Internships based on the Student's CV and the Internship's requirements. It is initiated by the platform when it detects a potential Match. The process then evolves to a 'WaitingForConfirmation' state, where the system waits for the Student and the Company to accept the Match. If one of the two parties rejects the Match, the process is terminated. If both parties accept the Match, an Interview is initiated, and the process is terminated.
+    \item The Recommendation Process is the core of the Student\&Company platform. It is the process that matches Students with Internships based on the Student's CV and the Internship's requirements. It is initiated by the platform when it detects a potential Match. The process then evolves to a "WaitingForConfirmation" state, where the system waits for the Student and the Company to accept the Match. If one of the two parties rejects the Match, the process is terminated. If both parties accept the Match, an Interview is initiated, and the process is terminated.
 \end{itemize}
 
-\textbf{Spontaneous Application Process}\\
-\includegraphics[width=1 \textwidth]{Images/SpontaneousApplicationStateChart.png}
+\noindent\textbf{Spontaneous Application Process}\\
+\begin{figure}[ht]
+    \centering
+    \includegraphics[width=1 \textwidth]{Diagrams/StateCharts/SpontaneousApplicationStateChart.png}
+    \caption{Spontaneous Application State Chart}
+    \label{fig:SpontaneousApplication}
+\end{figure}
 \begin{itemize}
-    \item Unlike the Recommendation Process, the Spontaneous Application process is initiated by the Student. When a Student submits a Spontaneous Application for an Internship, the process evolves to a 'WaitingForConfirmation' state, where the system waits for the Company to accept the Application. If the Company rejects the Application, the process is terminated. If the Company accepts the Application, an Interview Process is initiated, and the process is terminated.
+    \item Unlike the Recommendation Process, the Spontaneous Application process is initiated by the Student. When a Student submits a Spontaneous Application for an Internship, the process evolves to a "WaitingForConfirmation" state, where the system waits for the Company to accept the Application. If the Company rejects the Application, the process is terminated. If the Company accepts the Application, an Interview Process is initiated, and the process is terminated.
 \end{itemize} 
-\newpage 
 
-\textbf{Interview Process}\\
-\includegraphics[width=1 \textwidth]{Images/InterviewStateChart.png}
+\noindent\textbf{Interview Process}\\
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=1 \textwidth]{Diagrams/StateCharts/InterviewProcessStateChart.png}
+    \caption{Interview State Chart}
+    \label{fig:InterviewProcess}
+\end{figure}
 \begin{itemize}
-    \item The Interview Process is initiated when a Match is accepted by both the Student and the Company, or when a Spontaneous Application is accepted by the Company. The process starts in the 'InterviewCreation' state, where the Company is asked to submit a Template Interview or create a new one. Here, the Company is required to specify a deadline for the Interview. The Interview process evolves into the 'InterviewSubmitted' state once the Company sends the Template to the Student, who answers the questions and submits the Interview. If the Student fails to submit the answers within the deadline, he will be considered rejected, and the process is terminated. Otherwise, if the Template includes open-ended questions that require manual evaluation, the process evolves to a 'ToManualReview' state before entering the 'Consolidation' state. If the Template is fully automatic, on the other hand, the process evolves directly to the 'Consolidation' state. In the 'Consolidation' state, if the Student successfully passes the Interview, he is required to specify if he wants to accept the Internship or reject it before the expiration of the deadline, after which he will be considered rejected. In either way, the process ends immediately.
+    \item The Interview Process is initiated when a Match is accepted by both the Student and the Company, or when the Company accepts a Spontaneous Application. The process starts in the "ToBeSubmitted" state, where the Company is asked to create and submit an Interview. Here, the Company is required to specify a deadline for the Interview. The Interview process evolves into the "Submitted" state once the Company sends the Interview to the Student, who answers the questions and submits the Interview. If the Student fails to submit the answers within the deadline, he will be considered rejected, and the process is progressed to an "Evaluated" state and terminates. Otherwise, after the Interview has been sent back by the student, the process evolves to a "ToBeEvaluated" state. In this state, the Company can manually evaluate the Student's answers and mark the interview as accepted or rejected. In case the Student has been rejected, he will be notified of the outcome, and the process is terminated. Otherwise, if the Student has been accepted, an Internship Position Offer process is initiated and the Interview Process is terminated. If anywhere in the process, the Student accepts another Internship, the process is terminated and the Student will be considered rejected.
 \end{itemize}
 
+\noindent\textbf{Internship Position Offer process}\\
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=1 \textwidth]{Diagrams/StateCharts/InternshipPositionOfferStateChart.png}    
+    \caption{Internship Position Offer State Chart}
+    \label{fig:InternshipPositionOffer}
+\end{figure}
+\begin{itemize}
+    \item The Internship Position Offer process begins when a student successfully completes the Interview Process. Initially, the process enters the “ToBeAcceptedByCompany” state.
+    This state allows companies to evaluate and select the most suitable candidates when more students than required have passed the interview.
+    If the company rejects the student or the deadline expires, the process concludes, and the student will be considered rejected.
+    If the company accepts the student, the process transitions to the “ToBeAcceptedByStudent” state, where the student decides to either accept or reject the offer.
+    If the student rejects the offer or lets the deadline expire, the process concludes, and the student will be considered rejected.
+    If the student accepts the offer, the process concludes, and all the student’s other ongoing interviews are terminated with the student being marked as rejected in those interviews.
+    If anywhere in the process, the Student accepts another Internship, the process is terminated and the Student will be considered rejected.
+\end{itemize}
+
+\noindent\textbf{Selection Process}\\
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=1 \textwidth]{Diagrams/StateCharts/SelectionProcessStateChart.png}
+    \caption{Selection Process State Chart}
+    \label{fig:SelectionProcess}
+\end{figure}
+\begin{itemize}
+    \item The Selection Process diagram illustrates the relationship between the Interview Process and the Internship Position Offer Process.
+    The Selection Process terminates if the Match is rejected, if the Student is rejected during the Interview Process or the Internship Position Offer Process, or if the Student accepts another Internship.
+    If the Student is accepted during the Interview Process, the process transitions to the Internship Position Offer Process.
+    If the Student accepts the Internship Position Offer, the process also concludes.
+\end{itemize}
 
 \subsection{Product Functions}
 This section outlines the essential functionalities and detailed requirements of the platform, structured to support the key objectives defined in the scope of the product.
@@ -98,55 +147,58 @@ This section outlines the essential functionalities and detailed requirements of
     \item \textbf{Interview Management}: Companies can create and assign Template Interviews to Students, which include quizzes, questions, and calls to assess their suitability for an Internship. Both Students and Companies can track the Interview progress, and Companies can evaluate Student responses manually or automatically.
     \item \textbf{Feedback and Suggestions for Improvement}: The platform collects Feedback from Students and Companies to improve the Recommendation Process. It also provides Suggestions to Students on how to enhance their CVs and to Companies on how to improve their Internship descriptions.
     \item \textbf{Complaint Management}: Students and Companies can publish Complaints about ongoing Internships, which are then handled by Universities. Universities can monitor Complaints and interrupt Internships if necessary.
-    \item \textbf{Notification System}: Notifications are sent to Students, Companies, and Universities when relevant events occur, such as new Internships, matched Recommendations, Interview assignments, Complaints, and sign-up confirmation.
+    \item \textbf{Notification System}: Notifications are sent to Students, Companies, and Universities when relevant events occur, such as new Internships, matched Recommendations, Interview assignments,  Internship Position Offers, Complaints, Sign-up confirmation, or Communications.
 \end{enumerate}
 
 \subsubsection{Requirements}
 \begin{enumerate}[label={\color{titleColor}[R\arabic*]}]
     % Login
-    \item The system shall allow any unregistered students to register by providing personal information and selecting their University.
-    \item The system shall allow any companies to register by providing company information.
-    \item The system shall allow any universities to register by providing university information.
-    \item The system shall allow Users to log in using their email and password.
-    \item The system shall send notifications to Users when relevant events occur.
+    \item The platform shall allow any unregistered students to register by providing personal information and selecting their University.
+    \item The platform shall allow any companies to register by providing company information.
+    \item The platform shall allow any universities to register by providing university information.
+    \item The platform shall allow Users to log in using their email and password.
+    \item The platform shall send notifications to Users when relevant events occur.
     
     % Application advertisement and Applications
-    \item The system shall allow Companies to create and publish Internship offers specifying details.
-    \item The system shall allow Companies to terminate their Internship offers at their own discretion.
-    \item The system shall provide Students with automatically Matched Internships obtained by the Recommendation Process.
-    \item The system shall allow Students to view and navigate all available Internships.
-    \item The system shall enable Students to submit Spontaneous Applications to Internships they find interesting.
-    \item The system shall allow Students to submit their CV.
-    \item The system shall allow Students to modify their CV.
-    \item The system shall allow Students to monitor the status of their Spontaneous Applications.
-    \item The system shall allow Students to monitor the status of their Recommendation.
+    \item The platform shall allow Companies to create and publish Internship offers specifying details.
+    \item The platform shall allow Companies to terminate their Internship offers at their own discretion.
+    \item The platform shall provide Students with Matches automatically obtained by the Recommendation Process.
+    \item The platform shall allow Students to view and navigate all available Internships.
+    \item The platform shall enable Students to submit Spontaneous Applications to Internships they choose.
+    \item The platform shall allow Students to submit their CV.
+    \item The platform shall allow Students to modify their CV.
+    \item The platform shall allow Students to monitor the status of their Spontaneous Applications.
+    \item The platform shall allow Students to monitor the status of their Recommendation.
     
-    % Recommendation System
-    \item The system shall display to Students all the Internships found by the Recommendation system.
-    \item The system shall display to Companies all the CVs of Matched Students obtained by the Recommendation Process.
-    \item The system shall allow Students and Companies to accept a Recommendation.
-    \item The system shall allow Companies to accept a Spontaneous Application.
-    \item The system shall start a Selection Process only if both the Company and the Student have accepted the Recommendation.
-    \item The system shall start a Selection Process only if the Company has accepted the Spontaneous Application.
+    % Recommendation system
+    \item The platform shall display to Students all the Internships found by the Recommendation Process.
+    \item The platform shall display to Companies all the CVs of Matched Students obtained by the Recommendation Process.
+    \item The platform shall allow Students and Companies to accept a Recommendation.
+    \item The platform shall allow Companies to accept a Spontaneous Application.
+    \item The platform shall start a Selection Process only if both the Company and the Student have accepted the Recommendation.
+    \item The platform shall start a Selection Process only if the Company has accepted the Spontaneous Application.
     
     % Selection and Interview Management
-    \item The system shall allow Companies to create Template Interviews.
-    \item The system shall allow Companies to submit Template Interviews to Students they have initiated a Selection Process with.
-    \item The system shall allow Students to answer Interview questions and submit them.
-    \item The system shall allow Companies to manually evaluate Interview submissions.
-    \item The system shall allow Students and Companies to monitor the status of their Interviews.
-    \item The system shall enable Companies to complete the Interview process by submitting the final outcome to each candidate.
+    \item The platform shall allow Companies to create Interviews.
+    \item The platform shall allow Companies to submit Interviews to Students they have initiated a Selection Process with.
+    \item The platform shall allow Students to answer Interview questions and submit them.
+    \item The platform shall allow Companies to manually evaluate Interview submissions.
+    \item The platform shall allow Students and Companies to monitor the status of their Interviews.
+    \item The platform shall enable Companies to complete the Interview process by submitting the final outcome to each candidate.
+
+    %Internship Position Offer
+    \item The platform shall enable Companies to send an Internship Position Offer to a Student only if he previously passed the relative Interview.
+    \item The platform shall enable Students to accept or reject an Internship Position Offer sent by a Company only if he previously passed the relative Interview.
     
     % Feedback and Suggestions for Improvements
-    \item The system shall collect Feedback from both Students and Companies regarding the Recommendation Process.
-    \item The system shall provide Suggestions to Students on improving their CVs.
-    \item The system shall provide Suggestions to Companies on improving Internship descriptions.
+    \item The platform shall collect Feedback from both Students and Companies regarding the Recommendation Process.
+    \item The platform shall provide Suggestions to Students on improving their CVs.
+    \item The platform shall provide Suggestions to Companies on improving Internship descriptions.
     
     % Universities Oversight and Complaint Management
-    \item The system shall allow registered Universities to access and monitor Internship data related to their Students.
-    \item The system shall provide a platform for Students and Companies to complain, communicate problems, or provide information about the current status of an ongoing Internship.
-    \item The system shall notify registered Universities of any Complaint issued to their Students.
-    \item The system shall allow registered Universities to handle Complaints and to interrupt an Internship at their own discretion.
+    \item The platform shall allow registered Universities to access and monitor Internship Communications related to their Students.
+    \item The platform shall provide a dedicated space for Students and Companies to exchange Communications about the current status of an ongoing Internship.
+    \item The platform shall allow registered Universities to handle Complaints and to interrupt an Internship at their own discretion.
 \end{enumerate}
 
 
@@ -159,9 +211,9 @@ This section outlines the essential functionalities and detailed requirements of
 This section outlines the basic assumptions about the environment and behavior of entities that interact with the system. These assumptions simplify the design and implementation by defining expectations about Students, Companies, Universities, and the platform, ensuring the system operates effectively within its intended context.
 \begin{enumerate}[label={\color{titleColor}[D\arabic*]}]
 \item Students and Companies provide the Platform with correct and truthful information.
-\item Companies remove published internships if they are no longer available.
+\item Companies remove published Internships if they are no longer available.
 \item Students, Companies, and Universities receive and visualize every notification.
 \item Students, Companies, and Universities have a working internet connection.
-\item Universities interrupt an ongoing internship only if no solution is found to the complaints.
+\item Universities interrupt an ongoing Internship only if no solution is found to the Complaints.
 \end{enumerate}
 \subsubsection{Dependencies}
