--- a/Latex/main.tex
+++ b/Latex/main.tex
@@ -1,6 +1,7 @@
 \documentclass [11pt,twoside]{article}
 \usepackage[utf8]{inputenc}
 \usepackage[T1]{fontenc}
+\usepackage{float}
 \input{commandsFile}
 
 \begin{document}
